--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,9 @@
   --button-color: #007fb1;
   --background-color: #222;
   --title-font: 'Ubuntu', sans-serif;
+  --p-font-size: clamp(1.5rem, 2vw + 1rem, 2rem);
+  --h1-font-size: clamp(2rem, 3vw + 1rem, 3rem);	
+  --h2-font-size: clamp(1.5rem, 2.5vw + 1rem, 2.5rem);
 }
 
 * {
